# JustPutBasket

./: .gitignore  README.md  pyproject.toml
personal/: Image_Module.md  agent.md  full_sq.md  image_module_v1.md  동의어+전처리.md
plan/: V1 pipeline.md  V1.5 pipeline.md  V2 pipeline.md  V2 pipeline_revise.md  V2 plan.md  V3.md  V3_prob.md  input_output_ex.md
switch_query/: __init__.py
switch_query/image_module/: __init__.py  attributes.py  local_vlm_tagger.py  models.py  openai_baseline.py  pipeline.py  preprocessing.py  preprocessing_cli.py  storage.py  synonyms.py
switch_query/tagging/: __init__.py  attributes.py  local_vlm_tagger.py  openai_batch_tagger.py  openai_vlm_tagger.py  preprocessing.py  preprocessing_cli.py
switch_query/v1/: __init__.py  cli.py  encoder.py  generator.py  index.py  models.py  pipeline.py  policies.py
switch_query/v2/: cli.py  (+13 more)
tests/: test_image_module.py  test_image_module_compat.py  test_local_vlm_cli.py  test_openai_baseline.py  test_openai_batch_tagger.py  test_openai_vlm_tagger.py  test_preprocessing.py  test_v1_cli.py  test_v1_encoder.py  test_v1_generator.py  test_v1_pipeline.py  test_v2_cli.py  test_v2_llm_parser.py  test_v2_pipeline.py  test_v2_preprocessing.py  test_v2_preprocessing_cli.py  test_v2_tag_ranker.py  test_v3_batch_probe.py  test_v3_cli.py  test_v3_fashionpedia.py  test_v3_item_extractor.py  test_v3_llm_parser.py  test_v3_models.py  test_v3_pipeline.py  test_v3_preprocessing.py  test_v3_preprocessing_cli.py  test_v3_query_validation.py  test_v3_ranker.py  test_v3_retriever.py  test_v3_storage.py
tmp/: raw_tags.csv
(+17 files in other folders)
